fix broken link in welcome index page

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -21,7 +21,7 @@
       p
         | Source code available at:
         = " "
-        = link_to "https://github.com/diowa/amazed"
+        = link_to "github.com/diowa/amazed", "https://github.com/diowa/amazed"
 
       h3 Update the page to see different mazes.
 
